--- a/app/src/main/res/layout/activity_main_activity_ar.xml
+++ b/app/src/main/res/layout/activity_main_activity_ar.xml
@@ -4,6 +4,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <Button
+        android:id="@+id/GetServerData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Request"
+        android:layout_below="@+id/textView"
+        android:layout_alignStart="@+id/stuurButton" />
+
+    <Button
+        android:id="@+id/startloop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start Loop"
+        android:layout_alignTop="@+id/GetServerData"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="21dp" />
+
+    <Button
+        android:id="@+id/stoploop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stop Loop"
+        android:layout_below="@+id/startloop"
+        android:layout_alignEnd="@+id/startloop" />
+
+    <Button
+        android:id="@+id/stuurButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gyroscope (werkt niet)"
+        android:layout_centerVertical="true"
+        android:layout_alignEnd="@+id/startloop" />
+
+    <TextView
+        android:id="@+id/arrayStuff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="27dp"
+        android:text="leeg"
+        android:layout_below="@+id/stuurButton"
+        android:layout_alignParentLeft="true" />
+
+    <Button
+        android:id="@+id/nuButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nu waarde X"
+        android:layout_alignTop="@+id/arrayStuff"
+        android:layout_alignEnd="@+id/stuurButton" />
+
     <TextView
         android:id="@+id/display_reading"
         android:layout_width="wrap_content"
@@ -20,19 +72,12 @@
         android:text="Accelerometer"
         android:layout_below="@+id/GetServerData"
         android:layout_alignParentLeft="true" />
-    <Button
-        android:id="@+id/GetServerData"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="57dp"
-        android:text="Request"
-        android:layout_below="@+id/textView"
-        android:layout_toRightOf="@+id/textView" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world"
+        android:text="AccReq"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true" />
     <Button
@@ -40,51 +85,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Button"
-        android:layout_below="@+id/timerTextView"
-        android:layout_alignParentLeft="true" />
-    <Button
-        android:id="@+id/startloop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Start Loop"
-        android:layout_alignTop="@+id/stuurButton"
-        android:layout_alignLeft="@+id/stoploop" />
-    <Button
-        android:id="@+id/stoploop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Stop Loop"
-        android:layout_alignTop="@+id/timerTextView"
-        android:layout_toRightOf="@+id/GetServerData" />
+        android:layout_below="@+id/nuButton"
+        android:layout_alignEnd="@+id/nuButton"
+        android:layout_marginTop="31dp" />
+
     <TextView
         android:id="@+id/timerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
         android:text="New Text"
-        android:layout_below="@+id/nuButton"
-        android:layout_alignParentLeft="true" />
-    <Button
-        android:id="@+id/nuButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="Nu"
-        android:layout_below="@+id/arrayStuff"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignBottom="@+id/button"
+        android:layout_alignParentStart="true" />
+
     <TextView
-        android:id="@+id/arrayStuff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
-        android:text="leeg"
-        android:layout_below="@+id/stuurButton"
-        android:layout_alignParentLeft="true" />
-    <Button
-        android:id="@+id/stuurButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Stuur data"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true" />
+        android:text="Timer"
+        android:id="@+id/textView3"
+        android:layout_alignBaseline="@+id/button"
+        android:layout_alignBottom="@+id/button"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
